--- a/Views/Admin/AnexoIndex.cshtml
+++ b/Views/Admin/AnexoIndex.cshtml
@@ -5,68 +5,77 @@
     Layout = "~/Views/Shared/_LayoutPageAdmin.cshtml";
 }
 
-
-<div class="container">
-    <p>
-        @Html.ActionLink("Create New", "AnexoCreate")
-    </p>
-    <form class="row" asp-controller="Index" asp-action="Index" method="post">
-        <div class="col-6">
-            <div class="input-group input-group-sm mb-3">
-                <div class="input-group-prepend">
-                    <span class="input-group-text" id="inputGroup-sizing-sm">Procurar</span>
+<style>
+    .page-wrapper {
+        background-color: white;
+    }
+</style>
+<div class="page-wrapper mt-2">
+    <div class="container">
+        <h2>Anexos</h2>
+        <p>
+            @Html.ActionLink("Criar novo", "AnexoCreate")
+        </p>
+        <form class="row" asp-controller="Index" asp-action="Index" method="post">
+            <div class="col-6">
+                <div class="input-group input-group-sm mb-3">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text" id="inputGroup-sizing-sm">Procurar</span>
+                    </div>
+                    <input type="text" class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-sm" name="txtProcurar">
                 </div>
-                <input type="text" class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-sm" name="txtProcurar">
             </div>
-        </div>
-        <div class="col-6">
-            <button type="submit" class="btn-sm btn-success">Procurar</button>
-        </div>
-    </form>
-    <table class="table">
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Conteudo.Titulo)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Titulo)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DataPostagem)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Url)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Tipos)
-            </th>
-            <th></th>
-        </tr>
+            <div class="col-6">
+                <button type="submit" class="btn-sm btn-success">Procurar</button>
+            </div>
+        </form>
+        <div class="table-responsive">
+            <table id="zero_config" class="table table-striped table-bordered">
+                <tr>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Conteudo.Titulo)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Titulo)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.DataPostagem)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Url)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Tipos)
+                    </th>
+                    <th></th>
+                </tr>
 
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Conteudo.Titulo)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Titulo)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.DataPostagem)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Url)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Tipos)
-                </td>
-                <td>
-                    @Html.ActionLink("Edit", "AnexoEdit", new { id = item.Id }) |
-                    @Html.ActionLink("Details", "AnexoDetails", new { id = item.Id }) |
-                    @Html.ActionLink("Delete", "AnexoDelete", new { id = item.Id })
-                </td>
-            </tr>
-        }
-    </table>
-</div> 
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Conteudo.Titulo)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Titulo)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.DataPostagem)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Url)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Tipos)
+                        </td>
+                        <td>
+                            @Html.ActionLink("Editar", "AnexoEdit", new { id = item.Id }) |
+                            @Html.ActionLink("Detalhes", "AnexoDetails", new { id = item.Id }) |
+                            @Html.ActionLink("Deletar", "AnexoDelete", new { id = item.Id })
+                        </td>
+                    </tr>
+                }
+            </table>
+        </div>
+    </div>
+</div>
