--- a/Views/Admin/ConteudoDelete.cshtml
+++ b/Views/Admin/ConteudoDelete.cshtml
@@ -5,40 +5,46 @@
     Layout = "~/Views/Shared/_LayoutPageAdmin.cshtml";
 }
 
-<div class="container">
-    <h2>Delete</h2>
+<style>
+    .page-wrapper {
+        background-color: white;
+    }
+</style>
+<div class="page-wrapper mt-2">
+    <div class="container">
+        <h2>Deletar conteúdo</h2>
 
-    <h3>Are you sure you want to delete this?</h3>
-    <div>
-        <h4>Conteudo</h4>
-        <hr />
-        <dl class="dl-horizontal">
-            <dt>
-                @Html.DisplayNameFor(model => model.Modulo.Titulo)
-            </dt>
+        <h3>Tem certeza que deseja deletar esse conteúdo?</h3>
+        <div>
+            <hr />
+            <dl class="dl-horizontal">
+                <dt>
+                    @Html.DisplayNameFor(model => model.Modulo.Titulo)
+                </dt>
 
-            <dd>
-                @Html.DisplayFor(model => model.Modulo.Titulo)
-            </dd>
+                <dd>
+                    @Html.DisplayFor(model => model.Modulo.Titulo)
+                </dd>
 
-            <dt>
-                @Html.DisplayNameFor(model => model.Titulo)
-            </dt>
+                <dt>
+                    @Html.DisplayNameFor(model => model.Titulo)
+                </dt>
 
-            <dd>
-                @Html.DisplayFor(model => model.Titulo)
-            </dd>
+                <dd>
+                    @Html.DisplayFor(model => model.Titulo)
+                </dd>
 
-        </dl>
+            </dl>
 
-        @using (Html.BeginForm())
-        {
-            @Html.AntiForgeryToken()
+            @using (Html.BeginForm())
+            {
+                @Html.AntiForgeryToken()
 
-            <div class="form-actions no-color">
-                <input type="submit" value="Delete" class="btn btn-default" /> |
-                @Html.ActionLink("Back to List", "Index")
-            </div>
-        }
+                <div class="form-actions no-color">
+                    <input type="submit" value="Deletar" class="btn btn-default" /> |
+                    @Html.ActionLink("Voltar para home", "Index")
+                </div>
+            }
+        </div>
     </div>
 </div>
