--- a/Views/Admin/ConteudoDetails.cshtml
+++ b/Views/Admin/ConteudoDetails.cshtml
@@ -5,33 +5,39 @@
     Layout = "~/Views/Shared/_LayoutPageAdmin.cshtml";
 }
 
-<div class="container">
-    <h2>Details</h2>
+<style>
+    .page-wrapper {
+        background-color: white;
+    }
+</style>
+<div class="page-wrapper mt-2">
+    <div class="container">
+        <h2>Detalhes do conteudo</h2>
 
-    <div>
-        <h4>Conteudo</h4>
-        <hr />
-        <dl class="dl-horizontal">
-            <dt>
-                @Html.DisplayNameFor(model => model.Modulo.Titulo)
-            </dt>
+        <div>
+            <hr />
+            <dl class="dl-horizontal">
+                <dt>
+                    @Html.DisplayNameFor(model => model.Modulo.Titulo)
+                </dt>
 
-            <dd>
-                @Html.DisplayFor(model => model.Modulo.Titulo)
-            </dd>
+                <dd>
+                    @Html.DisplayFor(model => model.Modulo.Titulo)
+                </dd>
 
-            <dt>
-                @Html.DisplayNameFor(model => model.Titulo)
-            </dt>
+                <dt>
+                    @Html.DisplayNameFor(model => model.Titulo)
+                </dt>
 
-            <dd>
-                @Html.DisplayFor(model => model.Titulo)
-            </dd>
+                <dd>
+                    @Html.DisplayFor(model => model.Titulo)
+                </dd>
 
-        </dl>
+            </dl>
+        </div>
+        <p>
+            @Html.ActionLink("Editar", "ConteudoEdit", new { id = Model.Id }) |
+            @Html.ActionLink("Voltar para Home", "Index")
+        </p>
     </div>
-    <p>
-        @Html.ActionLink("Edit", "ConteudoEdit", new { id = Model.Id }) |
-        @Html.ActionLink("Back to List", "Index")
-    </p>
 </div>
