--- a/Views/Admin/CursoDelete.cshtml
+++ b/Views/Admin/CursoDelete.cshtml
@@ -1,50 +1,57 @@
 ﻿@model _30Code.Models.Curso
 
 @{ ViewBag.Title = "Delete";
-   Layout = "~/Views/Shared/_LayoutPageAdmin.cshtml";
+    Layout = "~/Views/Shared/_LayoutPageAdmin.cshtml";
 }
 
-<div class="container">
+<style>
+    .page-wrapper {
+        background-color: white;
+    }
+</style>
+<div class="page-wrapper mt-2">
+    <div class="container">
 
-    <h2>Delete</h2>
+        <h2>Deletar curso</h2>
 
-    <h3>Are you sure you want to delete this?</h3>
-    <div>
-        <h4>Curso</h4>
-        <hr />
-        <dl class="dl-horizontal">
-            <dt>
-                @Html.DisplayNameFor(model => model.Nome)
-            </dt>
+        <h3>Tem certeza que deseja deletar esse curso?</h3>
+        <div>
+            <hr />
+            <dl class="dl-horizontal">
+                <dt>
+                    @Html.DisplayNameFor(model => model.Nome)
+                </dt>
 
-            <dd>
-                @Html.DisplayFor(model => model.Nome)
-            </dd>
+                <dd>
+                    @Html.DisplayFor(model => model.Nome)
+                </dd>
 
-            <dt>
-                @Html.DisplayNameFor(model => model.Duracao)
-            </dt>
+                <dt>
+                    @Html.DisplayNameFor(model => model.Duracao)
+                </dt>
 
-            <dd>
-                @Html.DisplayFor(model => model.Duracao)
-            </dd>
+                <dd>
+                    @Html.DisplayFor(model => model.Duracao)
+                </dd>
 
-            <dt>
-                @Html.DisplayNameFor(model => model.Url_imagem)
-            </dt>
+                <dt>
+                    @Html.DisplayNameFor(model => model.Url_imagem)
+                </dt>
 
-            <dd>
-                @Html.DisplayFor(model => model.Url_imagem)
-            </dd>
-        </dl>
+                <dd>
+                    @Html.DisplayFor(model => model.Url_imagem)
+                </dd>
+            </dl>
 
-        @using (Html.BeginForm())
-        {
-            @Html.AntiForgeryToken()
+            @using (Html.BeginForm())
+            {
+                @Html.AntiForgeryToken()
 
-            <div class="form-actions no-color">
-                <input type="submit" value="Delete" class="btn btn-default" /> |
-                @Html.ActionLink("Back to List", "Index")
-            </div>}
+                <div class="form-actions no-color">
+                    <input type="submit" value="Deletar" class="btn btn-default" /> |
+                    @Html.ActionLink("Voltar para home", "Index")
+                </div>
+            }
+        </div>
     </div>
 </div>
