--- a/Views/Admin/Index.cshtml
+++ b/Views/Admin/Index.cshtml
@@ -51,7 +51,7 @@
                 <div class="card card-hover">
                     <div class="box bg-success text-center">
                         <h1 class="font-light text-white"><i class="mdi mdi-chart-areaspline"></i></h1>
-                        <h6 class="text-white">Charts</h6>
+                        <h6 class="text-white">Gráficos</h6>
                     </div>
                 </div>
             </div>
@@ -60,7 +60,7 @@
                 <div class="card card-hover">
                     <div class="box bg-warning text-center">
                         <h1 class="font-light text-white"><i class="mdi mdi-collage"></i></h1>
-                        <h6 class="text-white">Widgets</h6>
+                        <h6 class="text-white">Mensagens</h6>
                     </div>
                 </div>
             </div>
@@ -69,7 +69,7 @@
                 <div class="card card-hover">
                     <div class="box bg-danger text-center">
                         <h1 class="font-light text-white"><i class="mdi mdi-border-outside"></i></h1>
-                        <h6 class="text-white">Tables</h6>
+                        <h6 class="text-white">Cadastros</h6>
                     </div>
                 </div>
             </div>
@@ -78,7 +78,7 @@
                 <div class="card card-hover">
                     <div class="box bg-info text-center">
                         <h1 class="font-light text-white"><i class="mdi mdi-arrow-all"></i></h1>
-                        <h6 class="text-white">Full Width</h6>
+                        <h6 class="text-white">Edições</h6>
                     </div>
                 </div>
             </div>
@@ -88,7 +88,7 @@
                 <div class="card card-hover">
                     <div class="box bg-danger text-center">
                         <h1 class="font-light text-white"><i class="mdi mdi-receipt"></i></h1>
-                        <h6 class="text-white">Forms</h6>
+                        <h6 class="text-white">Deletes</h6>
                     </div>
                 </div>
             </div>
@@ -97,7 +97,7 @@
                 <div class="card card-hover">
                     <div class="box bg-info text-center">
                         <h1 class="font-light text-white"><i class="mdi mdi-relative-scale"></i></h1>
-                        <h6 class="text-white">Buttons</h6>
+                        <h6 class="text-white">Índices</h6>
                     </div>
                 </div>
             </div>
@@ -106,7 +106,7 @@
                 <div class="card card-hover">
                     <div class="box bg-cyan text-center">
                         <h1 class="font-light text-white"><i class="mdi mdi-pencil"></i></h1>
-                        <h6 class="text-white">Elements</h6>
+                        <h6 class="text-white">Estatísticas</h6>
                     </div>
                 </div>
             </div>
@@ -115,7 +115,7 @@
                 <div class="card card-hover">
                     <div class="box bg-success text-center">
                         <h1 class="font-light text-white"><i class="mdi mdi-calendar-check"></i></h1>
-                        <h6 class="text-white">Calnedar</h6>
+                        <h6 class="text-white">Reclamações</h6>
                     </div>
                 </div>
             </div>
@@ -124,7 +124,7 @@
                 <div class="card card-hover">
                     <div class="box bg-warning text-center">
                         <h1 class="font-light text-white"><i class="mdi mdi-alert"></i></h1>
-                        <h6 class="text-white">Errors</h6>
+                        <h6 class="text-white">Erros</h6>
                     </div>
                 </div>
             </div>
@@ -139,8 +139,8 @@
                     <div class="card-body">
                         <div class="d-md-flex align-items-center">
                             <div>
-                                <h4 class="card-title">Site Analysis</h4>
-                                <h5 class="card-subtitle">Overview of Latest Month</h5>
+                                <h4 class="card-title">Análise do site</h4>
+                                <h5 class="card-subtitle">visão geral do último mês</h5>
                             </div>
                         </div>
                         <div class="row">
@@ -156,28 +156,28 @@
                                         <div class="bg-dark p-10 text-white text-center">
                                             <i class="fa fa-user m-b-5 font-16"></i>
                                             <h5 class="m-b-0 m-t-5">2540</h5>
-                                            <small class="font-light">Total Users</small>
+                                            <small class="font-light">Total de usuários</small>
                                         </div>
                                     </div>
                                     <div class="col-6">
                                         <div class="bg-dark p-10 text-white text-center">
                                             <i class="fa fa-plus m-b-5 font-16"></i>
                                             <h5 class="m-b-0 m-t-5">120</h5>
-                                            <small class="font-light">New Users</small>
+                                            <small class="font-light">Novos usuários</small>
                                         </div>
                                     </div>
                                     <div class="col-6 m-t-15">
                                         <div class="bg-dark p-10 text-white text-center">
                                             <i class="fa fa-cart-plus m-b-5 font-16"></i>
                                             <h5 class="m-b-0 m-t-5">656</h5>
-                                            <small class="font-light">Total Shop</small>
+                                            <small class="font-light">Total de compra do premium</small>
                                         </div>
                                     </div>
                                     <div class="col-6 m-t-15">
                                         <div class="bg-dark p-10 text-white text-center">
                                             <i class="fa fa-tag m-b-5 font-16"></i>
                                             <h5 class="m-b-0 m-t-5">9540</h5>
-                                            <small class="font-light">Total Orders</small>
+                                            <small class="font-light">Total de acessos</small>
                                         </div>
                                     </div>
                                     <div class="col-6 m-t-15">
