--- a/Views/Admin/UsuHasCurHasContCreate.cshtml
+++ b/Views/Admin/UsuHasCurHasContCreate.cshtml
@@ -1,9 +1,10 @@
-﻿@model _30Code.Models.Anexo
+﻿@model _30Code.Models.Usuario_has_curso_has_conteudo
 
 @{
     ViewBag.Title = "Create";
     Layout = "~/Views/Shared/_LayoutPageAdmin.cshtml";
 }
+
 
 <style>
     .page-wrapper {
@@ -12,7 +13,9 @@
 </style>
 <div class="page-wrapper mt-2">
     <div class="container">
-        <h2>Criar anexo</h2>
+
+        <h2>Criar aproveitamento de conteúdo</h2>
+
         @using (Html.BeginForm())
         {
             @Html.AntiForgeryToken()
@@ -21,34 +24,26 @@
                 <hr />
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 <div class="form-group">
-                    @Html.LabelFor(model => model.Titulo, htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.LabelFor(model => model.DataDeConclusao, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
-                        @Html.EditorFor(model => model.Titulo, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Titulo, "", new { @class = "text-danger" })
+                        @Html.EditorFor(model => model.DataDeConclusao, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.DataDeConclusao, "", new { @class = "text-danger" })
                     </div>
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(model => model.DataPostagem, htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.LabelFor(model => model.Aproveitamento, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
-                        @Html.EditorFor(model => model.DataPostagem, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.DataPostagem, "", new { @class = "text-danger" })
+                        @Html.EditorFor(model => model.Aproveitamento, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Aproveitamento, "", new { @class = "text-danger" })
                     </div>
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(model => model.Url, htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.LabelFor(model => model.Usuario_has_cursoId, "Usuario_has_cursoId", htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
-                        @Html.EditorFor(model => model.Url, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Url, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    @Html.LabelFor(model => model.Tipos, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.EnumDropDownListFor(model => model.Tipos, htmlAttributes: new { @class = "form-control" })
-                        @Html.ValidationMessageFor(model => model.Tipos, "", new { @class = "text-danger" })
+                        @Html.DropDownList("Usuario_has_cursoId", null, htmlAttributes: new { @class = "form-control" })
+                        @Html.ValidationMessageFor(model => model.Usuario_has_cursoId, "", new { @class = "text-danger" })
                     </div>
                 </div>
 
@@ -67,7 +62,6 @@
                 </div>
             </div>
         }
-
         <div>
             @Html.ActionLink("Voltar para Home", "Index")
         </div>
