--- a/Views/Admin/UsuHasCurHasContEdit.cshtml
+++ b/Views/Admin/UsuHasCurHasContEdit.cshtml
@@ -1,4 +1,4 @@
-﻿@model _30Code.Models.Anexo
+﻿@model _30Code.Models.Usuario_has_curso_has_conteudo
 
 @{
     ViewBag.Title = "Edit";
@@ -12,7 +12,9 @@
 </style>
 <div class="page-wrapper mt-2">
     <div class="container">
-        <h2>Editar anexo</h2>
+
+        <h2>Editar aproveitamento de conteúdo</h2>
+
         @using (Html.BeginForm())
         {
             @Html.AntiForgeryToken()
@@ -23,34 +25,26 @@
                 @Html.HiddenFor(model => model.Id)
 
                 <div class="form-group">
-                    @Html.LabelFor(model => model.Titulo, htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.LabelFor(model => model.DataDeConclusao, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
-                        @Html.EditorFor(model => model.Titulo, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Titulo, "", new { @class = "text-danger" })
+                        @Html.EditorFor(model => model.DataDeConclusao, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.DataDeConclusao, "", new { @class = "text-danger" })
                     </div>
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(model => model.DataPostagem, htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.LabelFor(model => model.Aproveitamento, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
-                        @Html.EditorFor(model => model.DataPostagem, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.DataPostagem, "", new { @class = "text-danger" })
+                        @Html.EditorFor(model => model.Aproveitamento, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Aproveitamento, "", new { @class = "text-danger" })
                     </div>
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(model => model.Url, htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.LabelFor(model => model.Usuario_has_cursoId, "Usuario_has_cursoId", htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
-                        @Html.EditorFor(model => model.Url, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Url, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    @Html.LabelFor(model => model.Tipos, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.EnumDropDownListFor(model => model.Tipos, htmlAttributes: new { @class = "form-control" })
-                        @Html.ValidationMessageFor(model => model.Tipos, "", new { @class = "text-danger" })
+                        @Html.DropDownList("Usuario_has_cursoId", null, htmlAttributes: new { @class = "form-control" })
+                        @Html.ValidationMessageFor(model => model.Usuario_has_cursoId, "", new { @class = "text-danger" })
                     </div>
                 </div>
 
