--- a/Views/Admin/UsuarioDetails.cshtml
+++ b/Views/Admin/UsuarioDetails.cshtml
@@ -4,81 +4,87 @@
     ViewBag.Title = "UsuDetails";
     Layout = "~/Views/Shared/_LayoutPageAdmin.cshtml";
 }
-<div class="container">
-    <h2>UsuDetails</h2>
+<style>
+    .page-wrapper {
+        background-color: white;
+    }
+</style>
+<div class="page-wrapper mt-2">
+    <div class="container">
+        <h2>Detalhes do usuário</h2>
 
-    <div>
-        <h4>Usuario</h4>
-        <hr />
-        <dl class="dl-horizontal">
-            <dt>
-                @Html.DisplayNameFor(model => model.Nome)
-            </dt>
+        <div>
+            <hr />
+            <dl class="dl-horizontal">
+                <dt>
+                    @Html.DisplayNameFor(model => model.Nome)
+                </dt>
 
-            <dd>
-                @Html.DisplayFor(model => model.Nome)
-            </dd>
+                <dd>
+                    @Html.DisplayFor(model => model.Nome)
+                </dd>
 
-            <dt>
-                @Html.DisplayNameFor(model => model.Email)
-            </dt>
+                <dt>
+                    @Html.DisplayNameFor(model => model.Email)
+                </dt>
 
-            <dd>
-                @Html.DisplayFor(model => model.Email)
-            </dd>
+                <dd>
+                    @Html.DisplayFor(model => model.Email)
+                </dd>
 
-            <dt>
-                @Html.DisplayNameFor(model => model.Senha)
-            </dt>
+                <dt>
+                    @Html.DisplayNameFor(model => model.Senha)
+                </dt>
 
-            <dd>
-                @Html.DisplayFor(model => model.Senha)
-            </dd>
+                <dd>
+                    @Html.DisplayFor(model => model.Senha)
+                </dd>
 
-            <dt>
-                @Html.DisplayNameFor(model => model.Celular)
-            </dt>
+                <dt>
+                    @Html.DisplayNameFor(model => model.Celular)
+                </dt>
 
-            <dd>
-                @Html.DisplayFor(model => model.Celular)
-            </dd>
+                <dd>
+                    @Html.DisplayFor(model => model.Celular)
+                </dd>
 
-            <dt>
-                @Html.DisplayNameFor(model => model.Nascimento)
-            </dt>
+                <dt>
+                    @Html.DisplayNameFor(model => model.Nascimento)
+                </dt>
 
-            <dd>
-                @Html.DisplayFor(model => model.Nascimento)
-            </dd>
+                <dd>
+                    @Html.DisplayFor(model => model.Nascimento)
+                </dd>
 
-            <dt>
-                @Html.DisplayNameFor(model => model.UrlImagem)
-            </dt>
+                <dt>
+                    @Html.DisplayNameFor(model => model.UrlImagem)
+                </dt>
 
-            <dd>
-                @Html.DisplayFor(model => model.UrlImagem)
-            </dd>
+                <dd>
+                    @Html.DisplayFor(model => model.UrlImagem)
+                </dd>
 
-            <dt>
-                @Html.DisplayNameFor(model => model.TiposUsuarios)
-            </dt>
+                <dt>
+                    @Html.DisplayNameFor(model => model.TiposUsuarios)
+                </dt>
 
-            <dd>
-                @Html.DisplayFor(model => model.TiposUsuarios)
-            </dd>
+                <dd>
+                    @Html.DisplayFor(model => model.TiposUsuarios)
+                </dd>
 
-            <dt>
-                @Html.DisplayNameFor(model => model.Sexos)
-            </dt>
+                <dt>
+                    @Html.DisplayNameFor(model => model.Sexos)
+                </dt>
 
-            <dd>
-                @Html.DisplayFor(model => model.Sexos)
-            </dd>
+                <dd>
+                    @Html.DisplayFor(model => model.Sexos)
+                </dd>
 
-        </dl>
+            </dl>
+        </div>
+        <p>
+            @Html.ActionLink("Editar", "UsuarioEdit", new { id = Model.Id }) |
+            @Html.ActionLink("Voltar para Home", "Index")
+        </p>
     </div>
-    <p>
-        @Html.ActionLink("Edit", "UsuarioEdit", new { id = Model.Id }) |
-        @Html.ActionLink("Back to List", "Index")
-    </p>
 </div>
