--- a/Views/Admin/UsuarioIndex.cshtml
+++ b/Views/Admin/UsuarioIndex.cshtml
@@ -4,71 +4,78 @@
     ViewBag.Title = "UsuIndex";
     Layout = "~/Views/Shared/_LayoutPageAdmin.cshtml";
 }
+<style>
+    .page-wrapper {
+        background-color: white;
+    }
+</style>
+<div class="page-wrapper mt-2">
+    <div class="container">
+        <h2>Usuários</h2>
+        <p>
+            @Html.ActionLink("Criar novo", "UsuarioCreate")
+        </p>
+        <div class="table-responsive">
+            <table id="zero_config" class="table table-striped table-bordered">
+                <tr>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Nome)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Email)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Celular)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Nascimento)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.UrlImagem)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.TiposUsuarios)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Sexos)
+                    </th>
+                    <th></th>
+                </tr>
 
-<div class="container">
-    <h2>UsuIndex</h2>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Nome)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Email)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Celular)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Nascimento)
+                        </td>
+                        <td>
+                            <img src="~/assets/img/Usuarios/@item.UrlImagem"
+                                 style="max-width:70px;" />
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.TiposUsuarios)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Sexos)
+                        </td>
+                        <td>
+                            @Html.ActionLink("Editar", "UsuarioEdit", new { id = item.Id }) |
+                            @Html.ActionLink("Detalhes", "UsuarioDetails", new { id = item.Id }) |
+                            @Html.ActionLink("Deletar", "UsuarioDelete", new { id = item.Id })
+                        </td>
+                    </tr>
+                }
 
-    <p>
-        @Html.ActionLink("Create New", "UsuarioCreate")
-    </p>
-    <table class="table">
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Nome)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Email)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Celular)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Nascimento)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.UrlImagem)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.TiposUsuarios)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Sexos)
-            </th>
-            <th></th>
-        </tr>
-
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Nome)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Email)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Celular)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Nascimento)
-                </td>
-                <td>
-                    <img src="~/assets/img/Usuarios/@item.UrlImagem"
-                         style="max-width:70px;" />
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.TiposUsuarios)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Sexos)
-                </td>
-                <td>
-                    @Html.ActionLink("Edit", "UsuarioEdit", new { id = item.Id }) |
-                    @Html.ActionLink("Details", "UsuarioDetails", new { id = item.Id }) |
-                    @Html.ActionLink("Delete", "UsuarioDelete", new { id = item.Id })
-                </td>
-            </tr>
-        }
-
-    </table>
+            </table>
+        </div>
+    </div>
 </div>
