--- a/Views/Admin/UsuarioDelete.cshtml
+++ b/Views/Admin/UsuarioDelete.cshtml
@@ -83,11 +83,14 @@
 
             </dl>
 
-            @using (Html.BeginForm())
+            @using (Html.BeginForm("UsuarioDelete", "Admin", FormMethod.Post, new
+            {
+                enctype = "multipart/form-data"
+            }))
             {
                 @Html.AntiForgeryToken()
                 <div class="form-actions no-color">
-                    <input type="submit" value="Deletar" class="btn btn-default" /> |
+                    <input type="submit" value="Delete" class="btn btn-default" /> |
                     @Html.ActionLink("Voltar para Home", "Index")
                 </div>
             }
