--- a/Views/Admin/UsuarioCreate.cshtml
+++ b/Views/Admin/UsuarioCreate.cshtml
@@ -14,7 +14,8 @@
     <div class="container">
         <h2>Criar novo usuário</h2>
 
-        @using (Html.BeginForm("Create", "Usuariosadmin", FormMethod.Post, new { enctype = "multipart/form-data" }))
+        @using (Html.BeginForm("UsuarioCreate", "Admin", FormMethod.Post,
+new { enctype = "multipart/form-data" }))
         {
             @Html.AntiForgeryToken()
 
@@ -64,6 +65,7 @@
                 <div class="form-group">
                     <input name="arq" class="form-control" type="file" />
                 </div>
+
                 <div class="form-group">
                     @Html.LabelFor(model => model.TiposUsuarios, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
@@ -82,7 +84,7 @@
 
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Criar" class="btn btn-default" />
+                        <input type="submit" value="Create" class="btn btn-default" />
                     </div>
                 </div>
             </div>
