--- a/Views/Usuarios/EditarDados.cshtml
+++ b/Views/Usuarios/EditarDados.cshtml
@@ -1,4 +1,4 @@
-﻿@model _30Code.Models.EditarUsuario
+﻿@model _30Code.Models.UsuCreateEdit
 <div class="container">
 
     @{ ViewBag.Title = "Edit"; }
