--- a/Views/Admin/UsuarioCreate.cshtml
+++ b/Views/Admin/UsuarioCreate.cshtml
@@ -1,4 +1,4 @@
-﻿@model _30Code.Models.Usuario
+﻿@model _30Code.Models.UsuCreateEdit
 
 @{
     ViewBag.Title = "UsuCreate";
@@ -14,8 +14,7 @@
     <div class="container">
         <h2>Criar novo usuário</h2>
 
-        @using (Html.BeginForm("UsuarioCreate", "Admin", FormMethod.Post,
-new { enctype = "multipart/form-data" }))
+        @using (Html.BeginForm("UsuarioCreate", "Admin", FormMethod.Post, new { enctype = "multipart/form-data" }))
         {
             @Html.AntiForgeryToken()
 
@@ -47,6 +46,14 @@ new { enctype = "multipart/form-data" }))
                 </div>
 
                 <div class="form-group">
+                    @Html.LabelFor(model => model.ConfirmaSenha, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.ConfirmaSenha, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.ConfirmaSenha, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="form-group">
                     @Html.LabelFor(model => model.Celular, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
                         @Html.EditorFor(model => model.Celular, new { htmlAttributes = new { @class = "form-control" } })
@@ -63,7 +70,10 @@ new { enctype = "multipart/form-data" }))
                 </div>
 
                 <div class="form-group">
-                    <input name="arq" class="form-control" type="file" />
+                    @Html.LabelFor(model => model.UrlImagem, htmlAttributes: new { @class = "control-label col-md-12" })
+                    <div class="col-md-10">
+                        <input name="arq" class="form-control" type="file" />
+                    </div>
                 </div>
 
                 <div class="form-group">
@@ -84,7 +94,7 @@ new { enctype = "multipart/form-data" }))
 
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Create" class="btn btn-default" />
+                        <input type="submit" value="Criar" class="btn btn-default" />
                     </div>
                 </div>
             </div>
