--- a/Views/Usuarios/Cadastrar.cshtml
+++ b/Views/Usuarios/Cadastrar.cshtml
@@ -71,7 +71,7 @@
             </div>
 
             <div class="col-5">
-                @using (Html.BeginForm("Create", "Usuarios", FormMethod.Post))
+                @using (Html.BeginForm("Cadastrar", "Usuarios", FormMethod.Post))
                 {
                     @Html.AntiForgeryToken()
 
