--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -159,7 +159,7 @@ h1, h2, h3, h4, h5, h6, .font-primary {
         color: #5c768d;
         padding: 12px 15px;
         transition: 0.3s;
-        font-size: 14px;
+        font-size: 16px;
         font-family: "Open Sans", sans-serif;
     }
 
@@ -692,12 +692,12 @@ section {
             animation-delay: 0s;
             -webkit-animation: pulsate-btn 2s;
             animation: pulsate-btn 2s;
-            -webkit-animation-direction: forwards;
-            animation-direction: forwards;
+            -webkit-animation-direction: normal;
+            animation-direction: normal;
             -webkit-animation-iteration-count: infinite;
             animation-iteration-count: infinite;
-            -webkit-animation-timing-function: steps;
-            animation-timing-function: steps;
+            -webkit-animation-timing-function: step-start;
+            animation-timing-function: step-start;
             opacity: 1;
             border-radius: 50%;
             border: 5px solid rgba(66, 139, 202, 0.7);
@@ -1301,7 +1301,7 @@ section {
         font-size: 14px;
     }
 
-        .contact .php-email-form input::focus, .contact .php-email-form textarea::focus {
+        .contact .php-email-form input:focus, .contact .php-email-form textarea:focus {
             background-color: #428bca;
         }
 
@@ -1472,7 +1472,7 @@ section {
                 background: #428bca;
                 color: #fff;
                 transition: 0.3s;
-                border-radius: 4;
+                border-radius: 4px;
             }
 
                 #footer .footer-top .footer-newsletter form input[type="submit"]:hover {
@@ -1843,11 +1843,12 @@ a[name="PagMeusCursos"], a[name="PagMeusCursos"]:hover {
     display: flex;
     position: relative;
     cursor: pointer;
-    width: 48px;
-    height: 48px;
+    width: 42px;
+    height: 42px;
     border-radius: 50%;
     overflow: hidden;
     pointer-events: auto;
+    margin-top: 5px;
 }
 
     .top-bar-profile-picture:before {
@@ -1866,6 +1867,23 @@ a[name="PagMeusCursos"], a[name="PagMeusCursos"]:hover {
         transition: 0.2s;
     }
 
+#logado.nav-menu .drop-down > a:after {
+    content: none;
+}
+
+#logado.mobile-nav .drop-down > a:after {
+    content: none;
+}
+
+@media (max-width: 1366px) {
+    .top-bar-profile-picture {
+        margin-left: 18px;
+    }
+
+    #icon {
+        display: none;
+    }
+}
 
 /*--------------------------------------------------------------
 # CreateUsuario
@@ -2360,7 +2378,7 @@ p[name="PagIndexUsuario"] {
 
 .menu-content-item:hover {
     background: #105576;
-    -webkit-filter: drop-shadow(15px 10px 5px rgba(0,0,0,.5));
+    -webkit-filter: blur(3px);
     filter: drop-shadow(15px 10px 5px rgba(0,0,0,.5));
 }
 
