--- a/Views/Admin/CursoDelete.cshtml
+++ b/Views/Admin/CursoDelete.cshtml
@@ -33,13 +33,19 @@
                 <dd>
                     @Html.DisplayFor(model => model.Duracao)
                 </dd>
+                <dt>
+                    @Html.DisplayNameFor(model => model.Descricao)
+                </dt>
 
+                <dd>
+                    @Html.DisplayFor(model => model.Descricao)
+                </dd>
                 <dt>
                     @Html.DisplayNameFor(model => model.Url_imagem)
                 </dt>
 
                 <dd>
-                    @Html.DisplayFor(model => model.Url_imagem)
+                    <img src="~/assets/img/Cursos/@Model.Url_imagem" style="max-width:75px;" />
                 </dd>
             </dl>
 
