--- a/Views/Admin/CursoIndex.cshtml
+++ b/Views/Admin/CursoIndex.cshtml
@@ -27,6 +27,9 @@
                     <th>
                         @Html.DisplayNameFor(model => model.Url_imagem)
                     </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Descricao)
+                    </th>
                     <th></th>
                 </tr>
 
@@ -40,7 +43,10 @@
                             @Html.DisplayFor(modelItem => item.Duracao)
                         </td>
                         <td>
-                            @Html.DisplayFor(modelItem => item.Url_imagem)
+                            <img src="~/assets/img/Cursos/@item.Url_imagem"style="max-width:70px;"/>
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Descricao)
                         </td>
                         <td>
                             @Html.ActionLink("Editar", "CursoEdit", new { id = item.Id }) |
